[package]
name = "pyo3-playground-rust"
version = "0.0.0"
authors = ["Max Carrara <m.carrara@proxmox.com>"]
edition = "2021"
publish = false

rust-version = "1.56.0"

[dependencies]
pyo3 = { version = "0.19", features = ["abi3-py37"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
# needs to match the function with the `#[pymodule]` attribute
name = "_lib"

crate-type = ["cdylib"]

